--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Lover</title>
+    <title>Smart Food</title>
     <!-- Style Link -->
     <link rel="stylesheet" href="./style.css" >
     <!-- Fontawsome -->
@@ -13,7 +13,7 @@
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.png">
 </head>
 
 <body>
@@ -58,11 +58,12 @@
                             rerum. Blanditiis labore sed sapiente.</p>
                         <a href="#" class="btn btn-secondary">LEARN MORE</a>
                     </div>
-                    <img src="./img/about_img.png" alt="Pizza">
+                    <img src="./img/about_img.jpg" alt="Pizza">
                 </div>
             </div>
         </section>
         <!-- About Section End -->
+
         <!-- Offers Section Start -->
         <section id="offers">
             <div class="container">
@@ -99,6 +100,7 @@
             </div>
         </section>
         <!-- Offers Section End -->
+
         <!-- Menu Section Start -->
         <section id="menu">
             <div class="container">
@@ -109,42 +111,42 @@
                 <div class="menu-items">
                     <div class="menu-items-left">
                         <div class="menu-item">
-                            <img src="./img/food1.png" alt="LASAL Cheese">
+                            <img src="./img/food1.jpg" alt="LASAL Cheese">
                             <div>
                                 <h3>LASAL CHEESE <span class="primary-text">$18.00</span></h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, explicabo.</p>
                             </div>
                         </div>
                         <div class="menu-item">
-                            <img src="./img/food2.png" alt="JUMBO CRAB SHRIMP">
+                            <img src="./img/food2.jpg" alt="JUMBO CRAB SHRIMP">
                             <div>
                                 <h3>JUMBO CRAB SHRIMP <span class="primary-text">$24.00</span></h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, explicabo.</p>
                             </div>
                         </div>
                         <div class="menu-item">
-                            <img src="./img/food3.png" alt="KOKTAIL JUCIE">
+                            <img src="./img/food3.jpg" alt="KOKTAIL JUCIE">
                             <div>
                                 <h3>KOKTAIL JUCIE <span class="primary-text">$12.00</span></h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, explicabo.</p>
                             </div>
                         </div>
                         <div class="menu-item">
-                            <img src="./img/food4.png" alt="CAPO STEAK">
+                            <img src="./img/food4.jpg" alt="CAPO STEAK">
                             <div>
                                 <h3>CAPO STEAK <span class="primary-text">$60.00</span></h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, explicabo.</p>
                             </div>
                         </div>
                         <div class="menu-item">
-                            <img src="./img/food5.png" alt="ORGANIC FRUIT SALAD">
+                            <img src="./img/food5.jpg" alt="ORGANIC FRUIT SALAD">
                             <div>
                                 <h3>ORGANIC FRUIT SALAD <span class="primary-text">$8.00</span></h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, explicabo.</p>
                             </div>
                         </div>
                         <div class="menu-item">
-                            <img src="./img/food6.png" alt="CHEESE PIZZA">
+                            <img src="./img/food6.jpg" alt="CHEESE PIZZA">
                             <div>
                                 <h3>CHEESE PIZZA <span class="primary-text">$18.00</span></h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, explicabo.</p>
@@ -153,42 +155,42 @@
                     </div>
                     <div class="menu-items-right">
                         <div class="menu-item">
-                            <img src="./img/food7.jpeg" alt="KOFTA MEAT">
+                            <img src="./img/food7.jpg" alt="KOFTA MEAT">
                             <div>
                                 <h3>KOFTA MEAT <span class="primary-text">$40.00</span></h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, explicabo.</p>
                             </div>
                         </div>
                         <div class="menu-item">
-                            <img src="./img/food8.jpeg" alt="SPANISH PIES">
+                            <img src="./img/food8.jpg" alt="SPANISH PIES">
                             <div>
                                 <h3>SPANISH PIES <span class="primary-text">$14.00</span></h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, explicabo.</p>
                             </div>
                         </div>
                         <div class="menu-item">
-                            <img src="./img/food9.jpeg" alt="CHEESE TOST">
+                            <img src="./img/food9.jpg" alt="CHEESE TOST">
                             <div>
                                 <h3>CHEESE TOST <span class="primary-text">$6.00</span></h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, explicabo.</p>
                             </div>
                         </div>
                         <div class="menu-item">
-                            <img src="./img/food10.jpeg" alt="FRUIT SALAD">
+                            <img src="./img/food10.jpg" alt="FRUIT SALAD">
                             <div>
                                 <h3>FRUIT SALAD <span class="primary-text">$14.00</span></h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, explicabo.</p>
                             </div>
                         </div>
                         <div class="menu-item">
-                            <img src="./img/food11.jpeg" alt="CHICKEN SHAWARMA">
+                            <img src="./img/food11.jpg" alt="CHICKEN SHAWARMA">
                             <div>
                                 <h3>CHICKEN SHAWARMA <span class="primary-text">$20.00</span></h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, explicabo.</p>
                             </div>
                         </div>
                         <div class="menu-item">
-                            <img src="./img/food12.jpeg" alt="MEGA CHEESE PIZZA">
+                            <img src="./img/food12.jpg" alt="MEGA CHEESE PIZZA">
                             <div>
                                 <h3>MEGA CHEESE PIZZA <span class="primary-text">$30.00</span></h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, explicabo.</p>
@@ -200,6 +202,7 @@
             </div>
         </section>
         <!-- Menu Section End -->
+
         <!-- Daytime section start-->
         <section id="daytime">
             <div class="container">
