update name to smart food

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </nav>
         </div>
         <div class="content">
-            <h1>Welcome To <span class="primary-text"> Food Lover </span> Restaurant</h1>
+            <h1>Welcome To <span class="primary-text"> Smart Food</span> Restaurant</h1>
             <p>Here you can find Most delicacies food in the world</p>
             <a href="#contact" class="btn btn-primary">Book a Table</a>
         </div>
@@ -43,7 +43,7 @@
         <section id="about">
             <div class="container">
                 <div class="title">
-                    <h2>The Food Lover history</h2>
+                    <h2>The Smart Food history</h2>
                     <p>More than 25+ years of experience</p>
                 </div>
                 <div class="about-content">
